--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,8 @@
+.base{
+    background-color: #fff3e0;
+    height: 100vh;
+}
+
 .header{
     position: fixed !important;
     height: 60px;
@@ -37,4 +42,17 @@
 
 .gridCtnr{
     overflow: scroll;
+}
+
+.footer{
+    position: absolute;
+    margin-top: auto;
+    height: 80px;
+    bottom: 0;
+}
+
+.footerNav{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
